Fix messagelist subject area button icon vertical alignment

--- a/Libadwaita/styles/messagelist.less
+++ b/Libadwaita/styles/messagelist.less
@@ -43,6 +43,7 @@
 		 	border-radius: @button_radius;
 			width: @button_height;
 			height: @button_height;
+			line-height: @button_height;
 			text-align: center;
 
 			img.content-mask {
